[gd_scene load_steps=7 format=2]

[ext_resource path="res://Milk.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level.gd" type="Script" id=4]
[ext_resource path="res://Bodyguard.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1023, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, -1 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 4 )
Bodyguard_scene = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Milk" parent="." instance=ExtResource( 1 )]
position = Vector2( 456, 284 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 0, -1 )
rotation = 0.000976584

[node name="MilkTimer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]

[connection signal="milk_collected" from="Milk" to="." method="_on_Milk_milk_collected"]
[connection signal="milk_collected" from="Milk" to="HUD" method="_on_milk_collected"]
